res/examples/valid/assign.eg
let b: number = 123;

a = b;
