res/examples/invalid/let_decl_untyped_sets_env_type_reassign_type_mismatch.eg
let a = 123;
a = "foo";

// out: TypeError: mismatched types: expected type `number` but received `string`